--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -2,7 +2,7 @@ name: Generate Snake Animation
 
 on:
   schedule:
-    - cron: "0 0 * * *" # Runs daily at midnight UTC
+    - cron: "0 0 * * *"
   workflow_dispatch:
 
 jobs:
@@ -25,3 +25,5 @@ jobs:
         with:
           message: "Update contribution snake"
           add: "*.svg"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
