--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -20,10 +20,12 @@ jobs:
             ./github-contribution-grid-snake.svg
             ./github-contribution-grid-snake.gif
 
-      - name: Push snake animation to the README
-        uses: EndBug/add-and-commit@v9
-        with:
-          message: "Update contribution snake"
-          add: "*.svg"
+      - name: Commit and push snake animation (as GitHub Actions bot)
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git add *.svg *.gif || echo "No files to add"
+          git commit -m "Update contribution snake" || echo "No changes to commit"
+          git push
         env:
-          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
